[package]
edition = "2021"
name = "gpt-feeder"
version = "0.1.0"
license = "MIT"
keywords = ["gpt", "chatgpt", "cli", "gpt-4"]
description = "A command-line application that scans the entire codebase, and produces one string consisting of all filenames and file contents that you want included."
repository = "


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
glob = "0.3.1"
walkdir = "2.3.3"
