[package]
description = "A command-line application that scans the entire codebase, and produces one string consisting of all filenames and file contents that you want included."
edition = "2021"
keywords = ["gpt", "chatgpt", "cli", "gpt-4"]
license = "MIT"
name = "gpt-feeder"
repository = "https://github.com/magnusrodseth/gpt-feeder/tree/main"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = {version = "4.1.13", features = ["derive"]}
glob = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.10"
